application.properties 어노테이션 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+server.address=localhost:8080
+server.web-address=http://localhost:5173
+server.allowed-origins=http://localhost:5173
+
 spring.application.name=pathbook-api
+
 spring.datasource.url=jdbc:mysql://localhost:3306/pathbook
 spring.datasource.username=pathbook
 spring.datasource.password=pathbook
