사용자 인증 기능 구현
미구현된 컨트롤러 및 서비스는 주석처리 함
엔티티 변동 있음
자세한 사항은 코드 참고

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -11,6 +11,16 @@
       "description": "Address of web application."
     },
     {
+      "name": "web-path-verify-email",
+      "type": "java.lang.String",
+      "description": "Path to the page to verify email."
+    },
+    {
+      "name": "web-path-reset-password",
+      "type": "java.lang.String",
+      "description": "Path to the page to reset password."
+    },
+    {
       "name": "jwt.secret",
       "type": "java.lang.String",
       "description": "Secret key for JWT."
