--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-server.address=localhost:8080
-server.web-address=http://localhost:5173
+server.address=localhost
+server.port=8080
+
 server.allowed-origins=http://localhost:5173
+server.web-address=http://localhost:5173
+server.web-path-verify-email=/verify-email
+server.web-path-reset-password=/reset-password
 
 spring.application.name=pathbook-api
 
