설정 메타데이터 수정

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -11,12 +11,12 @@
       "description": "Address of web application."
     },
     {
-      "name": "web-path-verify-email",
+      "name": "server.web-path-verify-email",
       "type": "java.lang.String",
       "description": "Path to the page to verify email."
     },
     {
-      "name": "web-path-reset-password",
+      "name": "server.web-path-reset-password",
       "type": "java.lang.String",
       "description": "Path to the page to reset password."
     },
