파일 시스템 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 jwt.secret = your-256-bit-secret-key
+
+#-- Storage
+storage.location=upload-dir
